<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.477"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profileImageUrl"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/ic_launcher_background"
        app:civ_border_color="@color/black"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toEndOf="@+id/profileImageUrl"
        app:layout_constraintTop_toTopOf="@+id/profileImageUrl" />

    <EditText
        android:id="@+id/edittextusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Modifier"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/profileImageUrl"
        app:layout_constraintEnd_toEndOf="@+id/profileImageUrl"
        app:layout_constraintStart_toStartOf="@+id/profileImageUrl"
        app:layout_constraintTop_toTopOf="@+id/profileImageUrl"
        app:layout_constraintVertical_bias="0.975" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/edittextusername"
        app:layout_constraintEnd_toEndOf="@+id/edittextusername"
        app:layout_constraintTop_toTopOf="@+id/edittextusername"
        app:srcCompat="@drawable/write" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/profileImageUrl"
        app:layout_constraintTop_toBottomOf="@+id/profileImageUrl" />



    <EditText
        android:id="@+id/edittextdescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:maxLines="10"
        android:minLines="3"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/disconnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerview_plateform" />

    <TextView
        android:id="@+id/plateform_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/plateform"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="@+id/edittextdescription"
        app:layout_constraintTop_toBottomOf="@+id/edittextdescription" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_plateform"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/plateform_textview"
        app:layout_constraintTop_toBottomOf="@+id/plateform_textview" />

</androidx.constraintlayout.widget.ConstraintLayout>